--- a/languages/AWPCP-en_US.po
+++ b/languages/AWPCP-en_US.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2014-10-31 23:17:50+00:00\n"
+"POT-Creation-Date: 2014-11-11 15:40:36+00:00\n"
 "PO-Revision-Date: 2014-09-09 20:44-0600\n"
 "Last-Translator: Willington Vega <wvega@wvega.com>\n"
 "Language-Team: \n"
@@ -365,15 +365,6 @@ msgstr ""
 
 #: admin/templates/admin-panel-home.tpl.php:8
 msgid "AWPCP Support Website"
-msgstr ""
-
-#: admin/admin-panel-settings.php:158
-msgid ""
-"AWPCP could not obtain a valid access token from Facebook. Please try again."
-msgstr ""
-
-#: admin/admin-panel-settings.php:156
-msgid "AWPCP could not obtain a valid access token from Facebook: %s"
 msgstr ""
 
 #: includes/views/admin/listings/class-send-listing-to-facebook-admin-page.php:35
@@ -6175,6 +6166,17 @@ msgid ""
 "We can't process payments for this Payment Transaction at this time. Please "
 "contact the website administrator and provide the following transaction ID: "
 "%s"
+msgstr ""
+
+#: admin/admin-panel-settings.php:158
+msgid ""
+"We could not obtain a valid access token from Facebook. Please try again."
+msgstr ""
+
+#: admin/admin-panel-settings.php:156
+msgid ""
+"We could not obtain a valid access token from Facebook. The API returned the "
+"following error: %s"
 msgstr ""
 
 #: includes/payment-gateway-paypal-standard.php:278
