--- a/languages/AWPCP-en_US.po
+++ b/languages/AWPCP-en_US.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2014-11-25 01:31:03+00:00\n"
+"POT-Creation-Date: 2014-12-03 04:35:28+00:00\n"
 "PO-Revision-Date: 2014-09-09 20:44-0600\n"
 "Last-Translator: Willington Vega <wvega@wvega.com>\n"
 "Language-Team: \n"
@@ -2182,6 +2182,7 @@ msgid "Highest number used in aithmetic operation."
 msgstr ""
 
 #: frontend/templates/page-place-ad-details-step.tpl.php:196
+msgctxt "ad details form"
 msgid "I agree to the terms of service"
 msgstr ""
 
@@ -3829,6 +3830,7 @@ msgid "Read more"
 msgstr ""
 
 #: frontend/templates/page-place-ad-details-step.tpl.php:189
+msgctxt "ad details form"
 msgid "Read our Terms of Service"
 msgstr ""
 
@@ -4129,6 +4131,10 @@ msgstr ""
 
 #: admin/templates/admin-panel-settings-facebook-settings.tpl.php:103
 msgid "Save Token Value"
+msgstr ""
+
+#: frontend/widget-search.php:158
+msgid "Search"
 msgstr ""
 
 #: admin/templates/admin-panel-listings.tpl.php:14
