Update translation files for main plugin.

--- a/languages/AWPCP-en_US.po
+++ b/languages/AWPCP-en_US.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2015-11-11 19:07:03+00:00\n"
+"POT-Creation-Date: 2015-11-12 04:02:20+00:00\n"
 "PO-Revision-Date: 2015-11-11 14:16-0500\n"
 "Last-Translator: Willington Vega <wvega@wvega.com>\n"
 "Language-Team: \n"
@@ -2109,7 +2109,7 @@ msgstr ""
 #: frontend/page-place-ad.php:789
 msgid ""
 "Hi, Payment is required for posting Ads in this website and we couldn't find "
-"a Payment Transaction asssigned to you. You can't post Ads this time. If you "
+"a Payment Transaction assigned to you. You can't post Ads this time. If you "
 "think this is an error please contact the website Administrator."
 msgstr ""
 
