--- a/languages/AWPCP.pot
+++ b/languages/AWPCP.pot
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version:  \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2015-11-11 19:09:29+00:00\n"
+"POT-Creation-Date: 2015-11-12 04:02:20+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2337,7 +2337,7 @@ msgstr ""
 #: frontend/page-place-ad.php:789
 msgid ""
 "Hi, Payment is required for posting Ads in this website and we couldn't find "
-"a Payment Transaction asssigned to you. You can't post Ads this time. If you "
+"a Payment Transaction assigned to you. You can't post Ads this time. If you "
 "think this is an error please contact the website Administrator."
 msgstr ""
 
