--- a/languages/AWPCP-en_US.po
+++ b/languages/AWPCP-en_US.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: AWPCP\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2015-11-12 04:02:20+00:00\n"
+"POT-Creation-Date: 2015-11-12 16:01:42+00:00\n"
 "PO-Revision-Date: 2015-11-11 14:16-0500\n"
 "Last-Translator: Willington Vega <wvega@wvega.com>\n"
 "Language-Team: \n"
@@ -3029,7 +3029,7 @@ msgid "Missing"
 msgstr ""
 
 #: includes/helpers/facebook.php:31
-msgid "Missing App ID an Secret."
+msgid "Missing App ID and Secret."
 msgstr ""
 
 #: includes/helpers/facebook.php:36
