--- a/languages/AWPCP.pot
+++ b/languages/AWPCP.pot
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version:  \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2015-11-12 04:02:20+00:00\n"
+"POT-Creation-Date: 2015-11-12 16:01:42+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -4147,7 +4147,7 @@ msgid "The Ad was already sent to Facebook Group."
 msgstr ""
 
 #: includes/helpers/facebook.php:31
-msgid "Missing App ID an Secret."
+msgid "Missing App ID and Secret."
 msgstr ""
 
 #: includes/helpers/facebook.php:36
