--- a/languages/AWPCP.pot
+++ b/languages/AWPCP.pot
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version:  \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2016-01-14 17:52:15+00:00\n"
+"POT-Creation-Date: 2016-01-19 16:56:11+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1161,7 +1161,7 @@ msgid "Test Import"
 msgstr ""
 
 #: admin/templates/admin-panel-debug.tpl.php:8
-msgid "Are you seeng 404 Not Found errors?"
+msgid "Are you seeing 404 Not Found errors?"
 msgstr ""
 
 #: admin/templates/admin-panel-debug.tpl.php:10
