--- a/languages/AWPCP-ro_RO.po
+++ b/languages/AWPCP-ro_RO.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Another WordPress Classifieds Plugin\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-plugin\n"
 "POT-Creation-Date: 2016-03-21 21:25:31+00:00\n"
-"PO-Revision-Date: 2016-03-21 21:41+0000\n"
-"Last-Translator: Willington Vega <wvega@wvega.com>\n"
+"PO-Revision-Date: 2016-03-24 17:34+0000\n"
+"Last-Translator: Lucian Mihailescu <lucian@intercer.net>\n"
 "Language-Team: Romanian (Romania) (http://www.transifex.com/wp-translations/another-wordpress-classifieds-plugin/language/ro_RO/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5714,7 +5714,7 @@ msgstr "Debifați aceasta dacă aveți nevoie ca AWPCP să dezactiveze filtrul c
 
 #: includes/settings/class-general-settings.php:43
 msgid "Auto-expand the Classifieds Menu for mobile devices?"
-msgstr ""
+msgstr "Desfășoară automat Meniul Anunțurilor pentru dispozitivele mobile?"
 
 #: includes/settings/class-general-settings.php:51
 msgctxt "settings"
@@ -6141,35 +6141,35 @@ msgstr "Dacă este bifat, va fi afișată o listă dropdown cu categoriile de pr
 
 #: includes/settings/class-listings-moderation-settings.php:44
 msgid "Duration of listings in free mode (in days)"
-msgstr ""
+msgstr "Durata anunțurilor în modul gratuit (în zile)"
 
 #: includes/settings/class-listings-moderation-settings.php:47
 msgid ""
 "The end date for listings posted in free mode will be calculated using the "
 "value in this field. You can enter 0 to keep listings enabled for 10 years."
-msgstr ""
+msgstr "Data de sfârșit pentru anunțurile postate în modul gratuit va fi calculată folosind valoarea din acest câmp. Puteți introduce 0 pentru a păstra anunțul activ pentru 10 ani."
 
 #: includes/settings/class-listings-moderation-settings.php:50
 msgid "Disable expired listings instead of deleting them?"
-msgstr ""
+msgstr "Dezactivează anunțurile expirate în loc de a le șterge?"
 
 #: includes/settings/class-listings-moderation-settings.php:58
 msgid ""
 "If checked, listings will remain in disabled indefinitely after they expire."
 " If not checked, listings will be deleted after the number of days set in "
 "the next setting."
-msgstr ""
+msgstr "Dacă este bifat, anunțurile vor rămâne dezactivate indefinit, după ce expiră. Daca nu este bifat, anunțurile vor fi șterse după numărul de zile indicat în setarea următoare."
 
 #: includes/settings/class-listings-moderation-settings.php:61
 msgid ""
 "If the <setting-name> setting is NOT checked, the listings will be "
 "permanently deleted from the system, after the number of days specified in "
 "this field have passed since each listing was disabled."
-msgstr ""
+msgstr "Dacă setarea <setting-name> NU ESTE bifată, anunțurile vor fi permanent șterse din sistem, după ce numărul de zile specificat în acest câmp va trece, considerat de la data când fiecare anunț a fost dezactivat."
 
 #: includes/settings/class-listings-moderation-settings.php:71
 msgid "Number of days before expired listings are deleted"
-msgstr ""
+msgstr "Numărul de zile înainte ca anunțurile expirate să fie șterse"
 
 #: includes/settings/class-listings-moderation-settings.php:80
 msgid ""
