--- a/languages/another-wordpress-classifieds-plugin-ro_RO.po
+++ b/languages/another-wordpress-classifieds-plugin-ro_RO.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Another WordPress Classifieds Plugin\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-plugin\n"
 "POT-Creation-Date: 2016-06-13 15:56:40+00:00\n"
-"PO-Revision-Date: 2016-06-13 15:58+0000\n"
-"Last-Translator: Willington Vega <wvega@wvega.com>\n"
+"PO-Revision-Date: 2016-06-14 16:21+0000\n"
+"Last-Translator: Lucian Mihailescu <lucian@intercer.net>\n"
 "Language-Team: Romanian (Romania) (http://www.transifex.com/wp-translations/another-wordpress-classifieds-plugin/language/ro_RO/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1374,14 +1374,14 @@ msgstr "Ascunde planul plătit pentru public?"
 
 #: admin/templates/admin-panel-fees.tpl.php:4
 msgid "Payment Settings page"
-msgstr ""
+msgstr "Setările paginii de plată"
 
 #: admin/templates/admin-panel-fees.tpl.php:5
 msgid ""
 "Currently your classifieds are in Free mode. Fee plans are not available or "
 "used during free mode.<br/><br/> To change this, visit the <payment-"
 "settings-tab-link> and enable Charge Listing Fee setting."
-msgstr ""
+msgstr "În mod curent anunțurile dvs. sunt în modul gratuit. Planurile plătite nu sunt disponibile, nici folosite în timp ce folosiți modul gratuit. <br/><br/> Pentru a schimba aceasta, vizitați pagina <payment-settings-tab-link> și activați setarea Plătiți pentru anunțuri."
 
 #: admin/templates/admin-panel-fees.tpl.php:16
 msgid "Add Fee Plan"
@@ -5197,21 +5197,21 @@ msgstr "Zero înseamnă că pot fi afișate oricât de multe imagini miniatură 
 
 #: includes/settings/class-files-settings.php:78
 msgid "Hide No Image placeholder"
-msgstr ""
+msgstr "Ascundeți imaginea înlocuitoare pentru Nici o imagine"
 
 #: includes/settings/class-files-settings.php:79
 msgid "Override the No Image placeholder image with my own"
-msgstr ""
+msgstr "Suprascrieți imaginea înlocuitoare pentru Nici o imagine cu propria dvs. imagine"
 
 #: includes/settings/class-files-settings.php:80
 msgid "No Image Placeholder URL"
-msgstr ""
+msgstr "Nici un URL pentru imaginea înlocuitoare Nici o imagine"
 
 #: includes/settings/class-files-settings.php:80
 msgid ""
 "Put the URL of an existing image on your site to use.  The size of this "
 "image should match the thumbnail size settings on this tab"
-msgstr ""
+msgstr "Inserați URL-ul unei imagini existente de pe website-ul dvs. pentru a fi folosită. Mărimea acestei imagini trebui să fie aceeași cu marimea setată pentru imaginea thumbnail din acest tab"
 
 #: includes/settings/class-files-settings.php:88
 msgid "Image File Size"
@@ -5711,7 +5711,7 @@ msgstr "Dacă este bifat, va fi afișată o listă dropdown cu categoriile de pr
 
 #: includes/settings/class-general-settings.php:36
 msgid "Hide empty categories from dropdowns"
-msgstr ""
+msgstr "Ascunde categoriile goale din meniul drop-down"
 
 #: includes/settings/class-general-settings.php:37
 msgid "Welcome message in Classified page"
