--- a/languages/another-wordpress-classifieds-plugin-de_DE.po
+++ b/languages/another-wordpress-classifieds-plugin-de_DE.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Another WordPress Classifieds Plugin\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-plugin\n"
-"POT-Creation-Date: 2017-02-08 15:54:06+00:00\n"
-"PO-Revision-Date: 2017-02-08 16:01+0000\n"
+"POT-Creation-Date: 2017-02-08 23:35:08+00:00\n"
+"PO-Revision-Date: 2017-02-08 23:36+0000\n"
 "Last-Translator: Willington Vega <wvega@wvega.com>\n"
 "Language-Team: German (Germany) (http://www.transifex.com/wp-translations/another-wordpress-classifieds-plugin/language/de_DE/)\n"
 "MIME-Version: 1.0\n"
@@ -4975,6 +4975,14 @@ msgstr "Es gab ein Problem mit Ihrer Bezahlung. Der Bezahlstatus konnte nicht ge
 #: includes/payments-api.php:689
 msgid "Payment Not Verified"
 msgstr "Bezahlung nicht bestätigt."
+
+#: includes/placeholders/class-placeholders-installation-verifier.php:34
+msgid "Ad/Listings settings page"
+msgstr "Anzeigeneinstellungen"
+
+#: includes/placeholders/class-placeholders-installation-verifier.php:35
+msgid "Go to the %s to change the Single Ad layout."
+msgstr "Gehe zu %s um das Layout der Einzelanzeige zu ändern."
 
 #: includes/settings/class-credit-system-settings.php:16
 msgid "Credit System"
