--- a/languages/another-wordpress-classifieds-plugin-fr_FR.po
+++ b/languages/another-wordpress-classifieds-plugin-fr_FR.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Another WordPress Classifieds Plugin\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-plugin\n"
-"POT-Creation-Date: 2017-02-08 15:54:06+00:00\n"
-"PO-Revision-Date: 2017-02-08 16:01+0000\n"
+"POT-Creation-Date: 2017-02-08 23:35:08+00:00\n"
+"PO-Revision-Date: 2017-02-08 23:36+0000\n"
 "Last-Translator: Willington Vega <wvega@wvega.com>\n"
 "Language-Team: French (France) (http://www.transifex.com/wp-translations/another-wordpress-classifieds-plugin/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
@@ -4979,6 +4979,14 @@ msgstr "Une erreur s’est produite pendant le traitement de votre règlement. A
 #: includes/payments-api.php:689
 msgid "Payment Not Verified"
 msgstr "Paiement non vérifié"
+
+#: includes/placeholders/class-placeholders-installation-verifier.php:34
+msgid "Ad/Listings settings page"
+msgstr "Page de réglage des Annonces"
+
+#: includes/placeholders/class-placeholders-installation-verifier.php:35
+msgid "Go to the %s to change the Single Ad layout."
+msgstr "Aller à %s pour changer la mise en page d'une Annonce."
 
 #: includes/settings/class-credit-system-settings.php:16
 msgid "Credit System"
