Update German, Spanish and French translations. (#2150)

--- a/languages/another-wordpress-classifieds-plugin.pot
+++ b/languages/another-wordpress-classifieds-plugin.pot
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version:  \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/another-wordpress-classifieds-"
 "plugin\n"
-"POT-Creation-Date: 2018-10-12 20:30:51+00:00\n"
+"POT-Creation-Date: 2018-10-15 23:38:43+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -8482,7 +8482,7 @@ msgstr ""
 msgctxt "privacy policy"
 msgid ""
 "When you submit a classified listing, the content of the listing and its "
-"metadata are retained indefinetely. All users can see, edit or delete the "
+"metadata are retained indefinitely. All users can see, edit or delete the "
 "personal information included on their listings at any time. Website "
 "administrators can also see and edit that information."
 msgstr ""
