--- a/languages/another-wordpress-classifieds-plugin.pot
+++ b/languages/another-wordpress-classifieds-plugin.pot
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Another WordPress Classifieds Plugin (AWPCP) package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Another WordPress Classifieds Plugin (AWPCP) 4.0.14dev2\n"
+"Project-Id-Version: Another WordPress Classifieds Plugin (AWPCP) 4.0.15\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/another-wordpress-"
 "classifieds-plugin\n"
 "POT-Creation-Date: 2020-06-23 22:57:22+00:00\n"
